lista 3 -> corrections
